--- a/views/worker/driver.ejs
+++ b/views/worker/driver.ejs
@@ -5,6 +5,7 @@
 </head>
 <body>
   <h1>Driver Deliveries</h1>
-  <p>Here drivers can see assigned deliveries.</p>
+  <p>Here drivers can view assigned deliveries and update status.</p>
+  <p><a href="/worker">Back to Worker Portal</a></p>
 </body>
 </html>
