--- a/views/worker/kitchen.ejs
+++ b/views/worker/kitchen.ejs
@@ -5,6 +5,7 @@
 </head>
 <body>
   <h1>Kitchen Orders</h1>
-  <p>Here the cooks can see pending orders.</p>
+  <p>Here the kitchen staff can view pending orders and update status.</p>
+  <p><a href="/worker">Back to Worker Portal</a></p>
 </body>
 </html>
