--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -1,26 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title><%= title %></title>
+  <title><%= title %> | WeEat</title>
+  <link rel="stylesheet" href="/public/styles.css">
 </head>
 <body>
   <%- include('../partials/header') %>
-  
   <h2>Register</h2>
-  
   <% if (error) { %>
-    <p style="color: var(--primary-red); font-weight: bold;"><%= error %></p>
+    <p style="color: red;"><%= error %></p>
   <% } %>
-  
+
   <form action="/auth/register" method="POST">
-    <input type="text" name="username" placeholder="Choose a Username" required>
-    <input type="password" name="password" placeholder="Choose a Password" required>
-    <input type="submit" value="Register">
+    <label>Name:<input type="text" name="name" required></label><br>
+    <label>Email:<input type="email" name="email" required></label><br>
+    <label>Username:<input type="text" name="username" required></label><br>
+    <label>Password:<input type="password" name="password" required></label><br>
+    <label>Confirm Password:<input type="password" name="passwordConfirm" required></label><br>
+    <button type="submit">Register</button>
   </form>
-  
-  <p>Already have an account? <a href="/auth/login">Login</a></p>
-  
+  <p>Already have an account? <a href="/auth/login">Login here</a></p>
   <%- include('../partials/footer') %>
-  
 </body>
 </html>
