--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,7 @@
-    </div> <!-- end content -->
+    </main>
     <footer>
-      <p>&copy; 2025 WeEat 🍔 | Fast food complaints & more</p>
+      © <%= new Date().getFullYear() %> WeEat Inc.
     </footer>
-  </div> <!-- end wrapper -->
+  </div>
 </body>
 </html>
