--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -7,46 +7,18 @@
 </section>
 
 <section class="food-grid">
-  <div class="food-item">
-    <img src="https://images.unsplash.com/photo-1541592106381-b31e9677c0e5?w=500" alt="Fries">
-    <h3>Fries</h3>
-  </div>
-  <div class="food-item">
-    <img src="https://images.unsplash.com/photo-1580915411954-282cb1b0d780?w=500" alt="Ice Cream">
-    <h3>Ice Creams</h3>
-  </div>
-  <div class="food-item">
-    <img src="https://plus.unsplash.com/premium_photo-1694141252774-c937d97641da?w=500" alt="Jollof Rice">
-    <h3>Jollof Rice</h3>
-  </div>
-  <div class="food-item">
-    <img src="https://images.unsplash.com/photo-1612929633738-8fe44f7ec841?w=500" alt="Noodles">
-    <h3>Noodles</h3>
-  </div>
-  <div class="food-item">
-    <img src="https://images.unsplash.com/photo-1626645738196-c2a7c87a8f58?w=500" alt="Fried Chicken">
-    <h3>Fried Chicken</h3>
-  </div>
-  <div class="food-item">
-    <img src="https://plus.unsplash.com/premium_photo-1672498193267-4f0e8c819bc8?w=500" alt="Wings">
-    <h3>Wings</h3>
-  </div>
-  <div class="food-item">
-    <img src="https://images.unsplash.com/photo-1667329829058-ac191ba4a905?w=500" alt="Burger">
-    <h3>Burger</h3>
-  </div>
-  <div class="food-item">
-    <img src="https://plus.unsplash.com/premium_photo-1678051305065-1cd54b84272e?w=500" alt="Wraps">
-    <h3>Wraps</h3>
-  </div>
-  <div class="food-item">
-    <img src="https://images.unsplash.com/photo-1630979805425-08f5f5f39aff?w=500" alt="Drinks">
-    <h3>Drinks</h3>
-  </div>
-  <div class="food-item">
-    <img src="https://plus.unsplash.com/premium_photo-1667682942148-a0c98d1d70db?w=500" alt="Pizza">
-    <h3>Pizza</h3>
-  </div>
+  <% foods.forEach(food => { %>
+    <div class="food-item">
+      <img src="<%= food.image %>" alt="<%= food.name %>">
+      <h3><%= food.name %></h3>
+      <p>$<%= food.price.toFixed(2) %></p>
+      <form method="POST" action="/cart/add">
+        <input type="hidden" name="foodName" value="<%= food.name %>">
+        <input type="hidden" name="price" value="<%= food.price %>">
+        <button type="submit">Add to Cart</button>
+      </form>
+    </div>
+  <% }) %>
 </section>
 
 <%- include('partials/footer') %>
