--- a/views/orders/order_view.ejs
+++ b/views/orders/order_view.ejs
@@ -1,23 +1,19 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title><%= title %> | WeEat</title>
-  <link rel="stylesheet" href="/public/styles.css">
-</head>
-<body>
-  <%- include('../partials/header') %>
-  <h2>Orders</h2>
-  <table border="1">
-    <tr><th>ID</th><th>Items</th><th>Total</th><th>Status</th></tr>
-    <% orders.forEach(o => { %>
-      <tr>
-        <td><a href="/orders/<%= o.id %>"><%= o.id %></a></td>
-        <td><%= o.items %></td>
-        <td>$<%= o.totalAmount.toFixed(2) %></td>
-        <td><%= o.status %></td>
-      </tr>
+<%- include('../partials/header') %>
+<h2>Your Orders</h2>
+<% if (orders.length === 0) { %>
+  <p>You have no orders yet.</p>
+<% } else { %>
+  <ul>
+    <% orders.forEach(order => { %>
+      <li>
+        <strong>Order #<%= order.id %></strong> - $<%= order.totalAmount %> - <%= order.status %>
+        <ul>
+          <% JSON.parse(order.items).forEach(i => { %>
+            <li><%= i.name %> x <%= i.qty %> - $<%= i.price %></li>
+          <% }) %>
+        </ul>
+      </li>
     <% }) %>
-  </table>
-  <%- include('../partials/footer') %>
-</body>
-</html>
+  </ul>
+<% } %>
+<%- include('../partials/footer') %>
